--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Children -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Princes -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'Prince Vance: The Story of a Prince with a Court in His Box'
 url: http://www.gutenberg.org/ebooks/29005
